--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,9 @@
     "angular": "~1.4.3",
     "ngCordova": "~0.1.17-alpha",
     "angular-resource": "~1.4.3",
-    "lodash": "~3.10.0"
+    "lodash": "~3.10.0",
+    "angular-material": "~0.11.2",
+    "animate.css":"~3.4.0"
   },
   "resolutions": {
     "angular": "1.4.3"
